h1 wraps, fix grammar index, img nodrag, new wording

--- a/app/assets/stylesheets/launch.scss
+++ b/app/assets/stylesheets/launch.scss
@@ -77,6 +77,7 @@ body {
 
 .sample-image {
   border-radius: 30px;
+  pointer-events: none;
 }
 
 .icon-reload {
@@ -101,7 +102,7 @@ body {
 
 .upload-container {
   background-color:rgba(91, 91, 91, 0.4);;
-  padding: 4rem 5rem;
+  padding: 4rem 2rem;
   border-radius: 2rem;
   display: inline-block;
   cursor: pointer;
